# correlation-notebooks

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/yahoo_1d/bonds/: FVX.csv  IRX.csv  TNX.csv  TYX.csv
data/yahoo_1d/commodities/: BZ=F.csv  CL=F.csv  GC=F.csv  HG=F.csv  NG=F.csv  SI=F.csv  ZC=F.csv  ZS=F.csv  ZW=F.csv
data/yahoo_1d/cripto/: ADA-USD.csv  BTC-USD.csv  ETH-USD.csv  SOL-USD.csv  XRP-USD.csv
data/yahoo_1d/forex/: AUDJPY=X.csv  AUDNZD=X.csv  AUDUSD=X.csv  CHFJPY=X.csv  EURAUD=X.csv  EURGBP=X.csv  EURJPY=X.csv  EURUSD=X.csv  GBPAUD=X.csv  GBPJPY=X.csv  GBPUSD=X.csv  NZDUSD=X.csv  USDCAD=X.csv  USDCHF=X.csv  USDJPY=X.csv
data/yahoo_1d/indexes/: BVSP.csv  DJI.csv  DJT.csv  DX-Y.NYB.csv  FTSE.csv  GDAXI.csv  GSPC.csv  HSI.csv  IXIC.csv  N225.csv  RUT.csv  STOXX50E.csv  VIX.csv
data/yahoo_1d/stocks/: AAPL.csv  ABBV.csv  AMT.csv  AMZN.csv  AVGO.csv  AXP.csv  BAC.csv  CAT.csv  COP.csv  COST.csv  CRM.csv  CVX.csv  (+32 more)
notebooks/: VIX.ipynb  _init_notebook.py  correlation_results_with_lags.csv  example_backtesting.ipynb  pct_changes_matrix.ipynb
notebooks/data_research/: btc_direction_research.ipynb  btc_monthly_seasonality.ipynb  data_correlations.ipynb
notebooks/ml_research/: btc_direction_predictor.ipynb
results/: correlation_cripto_results_with_lags.csv  vix_cripto_correlations.csv
scripts/: _init_scripts.py  yahoo_1d_collector.ipynb
utils/constants/: stock_symbols.py
utils/correlations/: correlations.py  correlations_vectorized.py
utils/indicators/: ta_calendar_indicators.py  ta_generic_indicators.py
utils/tests/: backtesting.py
